[java-highlighting] IDEA-381190 IDEA suggests to add implicit class name as qualifier on attempt to use a static method from it in another class
- cleanup

GitOrigin-RevId: 4754bcf5a7c51b780e6b3c23a2e2c30a601d9006